--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@
 <title>&#127881; milkyway</title> <!-- &#127881; is a Unicode character for a star icon -->
 </head>
 <body>
-  <div>milkyway: a csgo legit cheat based on millionware's source. if you wanna buy, direct message the staff members on discord (@szekely_szalami or @trezz8)</div>
+  <div>milkyway:
+    a csgo legit cheat based on millionware's source.
+    if you wanna buy, direct message the staff members on discord
+    (@szekely_szalami or @trezz8)</div>
 </body>
 </html>
