--- a/index.html
+++ b/index.html
@@ -1,28 +1,4 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<style>
-  body {
-    margin: 0;
-    padding: 0;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    min-height: 100vh;
-    background-color: black;
-    color: white;
-    font-size: 16px;
-    font-family: Arial, sans-serif;
-  }
-</style>
-<title>&#127881; milkyway</title> <!-- &#127881; is a Unicode character for a star icon -->
-</head>
-<body>
-  <div>milkyway:
-    a csgo legit cheat based on millionware's source.
-    if you wanna buy, direct message the staff members on discord
-    (@szekely_szalami or @trezz8)</div>
-</body>
+<iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/3USURTfGoVZaElbjpo8Ntd?utm_source=generator" width="600" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
 </html>
