--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-<!DOCTYPE html>
-<html lang="en">
-<iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/3USURTfGoVZaElbjpo8Ntd?utm_source=generator" width="600" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
-</html>
+<iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/3USURTfGoVZaElbjpo8Ntd?utm_source=generator" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy">
+  
+</iframe>
