--- a/index.html
+++ b/index.html
@@ -9,3 +9,31 @@
 <iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/5aScaOmYqiIOIbLS1ZuqHt?utm_source=generator" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy">
 
 </iframe>
+
+<iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/5aScaOmYqiIOIbLS1ZuqHt?utm_source=generator" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy">
+
+</iframe>
+
+<iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/5aScaOmYqiIOIbLS1ZuqHt?utm_source=generator" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy">
+
+</iframe>
+
+<iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/5aScaOmYqiIOIbLS1ZuqHt?utm_source=generator" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy">
+
+</iframe>
+
+<iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/5aScaOmYqiIOIbLS1ZuqHt?utm_source=generator" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy">
+
+</iframe>
+
+<iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/5aScaOmYqiIOIbLS1ZuqHt?utm_source=generator" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy">
+
+</iframe>
+
+<iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/5aScaOmYqiIOIbLS1ZuqHt?utm_source=generator" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy">
+
+</iframe>
+
+<iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/5aScaOmYqiIOIbLS1ZuqHt?utm_source=generator" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy">
+
+</iframe>
